--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,20 @@ li {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+
+/* 3D Card Flip Effect */
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
